--- a/.github/workflows/build-sdk.yml
+++ b/.github/workflows/build-sdk.yml
@@ -7,55 +7,53 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
-    env:
-      PTOTO_REPO: github.com/DuC-cnZj/event-bus-proto
-    name: Build
-    runs-on: ubuntu-18.04
-    steps:
-
-      - name: setup
-        uses: actions/setup-go@v2
-        with:
-          go-version: ^1.15
-
-      - name: Check out code into the Go module directory
-        uses: actions/checkout@v2
-
-      - name: Get dependencies
-        run: |
-          sudo apt-get install -y git
-          curl -LO https://github.com/protocolbuffers/protobuf/releases/download/v3.13.0/protoc-3.13.0-linux-x86_64.zip
-          sudo apt-get install unzip
-          unzip protoc-3.13.0-linux-x86_64.zip -d $HOME/.local
-          export PATH="$PATH:$HOME/.local/bin"
-          protoc --version
-          go install github.com/golang/protobuf/protoc-gen-go
-          go install google.golang.org/grpc/cmd/protoc-gen-go-grpc
-
-      - name: build protos
-        run: |
-          export PATH="$PATH:$HOME/.local/bin"
-          protoc --version
-          make build-protos
-
-      - name: upload protos
-        run: |
-          cd protos
-          MYPATH=$(pwd)
-          cd /tmp
-          git clone https://DuC-cnZj:${{ secrets.TOKEN }}@$PTOTO_REPO.git repo
-          cd repo
-          if [ ! -f "go.mod" ]; then go mod init $PTOTO_REPO;fi
-          mv $MYPATH/* /tmp/repo/
-          echo $GITHUB_SHA > sha.txt
-          git config --local user.name "duc"
-          git config --local user.email "1025434218@qq.com"
-          git add .
-          git commit -m "$GITHUB_SHA"
-          git remote set-url --push origin https://DuC-cnZj:${{ secrets.TOKEN }}@$PTOTO_REPO.git
-          git push -u origin master
-
+#  build:
+#    env:
+#      PTOTO_REPO: github.com/DuC-cnZj/event-bus-proto
+#    name: Build
+#    runs-on: ubuntu-18.04
+#    steps:
+#      - name: setup
+#        uses: actions/setup-go@v2
+#        with:
+#          go-version: ^1.15
+#
+#      - name: Check out code into the Go module directory
+#        uses: actions/checkout@v2
+#
+#      - name: Get dependencies
+#        run: |
+#          sudo apt-get install -y git
+#          curl -LO https://github.com/protocolbuffers/protobuf/releases/download/v3.13.0/protoc-3.13.0-linux-x86_64.zip
+#          sudo apt-get install unzip
+#          unzip protoc-3.13.0-linux-x86_64.zip -d $HOME/.local
+#          export PATH="$PATH:$HOME/.local/bin"
+#          protoc --version
+#          go install github.com/golang/protobuf/protoc-gen-go
+#          go install google.golang.org/grpc/cmd/protoc-gen-go-grpc
+#
+#      - name: build protos
+#        run: |
+#          export PATH="$PATH:$HOME/.local/bin"
+#          protoc --version
+#          make build-protos
+#
+#      - name: upload protos
+#        run: |
+#          cd protos
+#          MYPATH=$(pwd)
+#          cd /tmp
+#          git clone https://DuC-cnZj:${{ secrets.TOKEN }}@$PTOTO_REPO.git repo
+#          cd repo
+#          if [ ! -f "go.mod" ]; then go mod init $PTOTO_REPO;fi
+#          mv $MYPATH/* /tmp/repo/
+#          echo $GITHUB_SHA > sha.txt
+#          git config --local user.name "duc"
+#          git config --local user.email "1025434218@qq.com"
+#          git add .
+#          git commit -m "$GITHUB_SHA"
+#          git remote set-url --push origin https://DuC-cnZj:${{ secrets.TOKEN }}@$PTOTO_REPO.git
+#          git push -u origin master
   build-php-sdk:
     env:
       PHP_SDK_REPO: github.com/DuC-cnZj/event-bus-php-sdk
