--- a/.github/workflows/build-sdk.yml
+++ b/.github/workflows/build-sdk.yml
@@ -24,6 +24,16 @@ jobs:
           ini-values: post_max_size=256M, short_open_tag=On
           coverage: xdebug
           tools: php-cs-fixer, phpunit
+
+      - name: Cache node modules
+        uses: actions/cache@v2
+        env:
+          cache-name: cache-dep
+        with:
+          path:
+            - $HOME/.local
+            - grpc
+
       - name: Get dependencies
         run: |
           sudo apt-get install -y git
