--- a/.github/workflows/build-sdk.yml
+++ b/.github/workflows/build-sdk.yml
@@ -56,6 +56,7 @@ jobs:
       - name: build php sdk
         run: |
           ls
+          ls grpc
           cp grpc/bins/opt/grpc_php_plugin /usr/local/bin/grpc_php_plugin
           export PATH="$PATH:$HOME/.local/bin"
           protoc --version
