--- a/.github/workflows/build-sdk.yml
+++ b/.github/workflows/build-sdk.yml
@@ -68,7 +68,8 @@ jobs:
         run: |
           cp sdks/php/.gitignore sdks/php/src/DucCnzj
           cp sdks/php/README.md sdks/php/src/DucCnzj
-          MYPATH=sdks/php/src/DucCnzj
+          cd sdks/php/src/DucCnzj
+          MYPATH=$(pwd)
           ls
           cd /tmp
           git clone https://DuC-cnZj:${{ secrets.TOKEN }}@$PHP_SDK_REPO.git php-repo
