--- a/charts/templates/deployment.yaml
+++ b/charts/templates/deployment.yaml
@@ -19,7 +19,13 @@ spec:
     {{- end }}
       labels:
         {{- include "charts.selectorLabels" . | nindent 8 }}
+      annotations:
+        checksum/config: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
     spec:
+      volumes:
+        - name: config
+          configMap:
+            name: {{ include "charts.fullname" . }}-configmap
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
@@ -33,21 +39,26 @@ spec:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          command:
+            - app
+            - serve
+          volumeMounts:
+            - name: config
+              mountPath: /config.yaml
+              subPath: config.yaml
           ports:
             - name: http
-              containerPort: {{ .Values.config.HttpPort }}
+              containerPort: {{ .Values.conf.HttpPort }}
               protocol: TCP
             - name: grpc
-              containerPort: {{ .Values.config.RpcPort }}
+              containerPort: {{ .Values.conf.RpcPort }}
               protocol: TCP
           livenessProbe:
-            httpGet:
-              path: /ping
-              port: http
+            tcpSocket:
+              port: {{ .Values.conf.RpcPort }}
           readinessProbe:
-            httpGet:
-              path: /ping
-              port: http
+            tcpSocket:
+              port: {{ .Values.conf.RpcPort }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
