--- a/charts/templates/service.yaml
+++ b/charts/templates/service.yaml
@@ -7,11 +7,11 @@ metadata:
 spec:
   type: {{ .Values.service.type }}
   ports:
-    - port: 80
+    - port: {{ .Values.service.httpPort }}
       targetPort: http
       protocol: TCP
       name: http
-    - port: 9999
+    - port: {{ .Values.service.rpcPort }}
       targetPort: grpc
       protocol: TCP
       name: grpc
