--- a/charts/values.yaml
+++ b/charts/values.yaml
@@ -101,7 +101,7 @@ conf:
 
   # cronjob
   CronRepublishEnabled: false
-  CronDelayPushEnabled: false
+  CronDelayPublishEnabled: false
 
   # DATABASE
   DB_HOST: 127.0.0.1
