--- a/example.config.yaml
+++ b/example.config.yaml
@@ -19,7 +19,7 @@ RedisPassword:
 
 # cronjob
 CronRepublishEnabled: false
-CronDelayPushEnabled: false
+CronDelayPublishEnabled: false
 
 # DATABASE
 DB_HOST: 127.0.0.1
