--- a/charts/templates/configmap.yaml
+++ b/charts/templates/configmap.yaml
@@ -38,3 +38,4 @@ data:
     EachQueueConsumerNum: {{ default "5" .Values.conf.EachQueueConsumerNum }}
     EachQueueProducerNum: {{ default "2" .Values.conf.EachQueueProducerNum }}
     BackConsumerNum: {{ default "10" .Values.conf.BackConsumerNum }}
+    BackgroundConsumerEnabled: {{ default true .Values.conf.BackgroundConsumerEnabled }}
