--- a/charts/values.yaml
+++ b/charts/values.yaml
@@ -82,35 +82,53 @@ affinity: {}
 conf:
   Debug: false
   PrintConfig: false
+
+  # 重试次数
   RetryTimes: 3
+
+  # 分布式锁加锁时长
   DLMExpiration: 1800
+
+  # 每个job最大执行时间
   MaxJobRunningSeconds: 1800
 
-  HttpPort: 7878
+  # nackd 之后重新推送的延迟时间
+  NackdJobNextRunDelaySeconds: 600
 
-  RpcPort: 9091
+  # cronjob
+  # nack 以及 未消费队列重新推送定时任务
+  CronRepublishEnabled: true
+
+  # 延迟队列定时任务
+  CronDelayPublishEnabled: true
+
+  # 是否开启后台 event_bus_ack_queue 和 event_bus_confirm_queue 消费队列
+  BackgroundConsumerEnabled: true
+
+  # 后台 event_bus_ack_queue  event_bus_confirm_queue 定时任务 的协程数量
+  # 默认 10 个就行了，根据数据库处理能力定, BackgroundConsumerEnabled 为 false 不执行
+  BackConsumerGoroutineNum: 10
 
   AmqpUrl: amqp://guest:guest@localhost:5672/
-  PrefetchCount: 500
+  PrefetchCount: 1000
+  HttpPort: 7878
+  RpcPort: 9091
 
   # redis
   RedisAddr: localhost:6379
   RedisDB: 0
-  RedisUsername: ""
-  RedisPassword: ""
-
-  # cronjob
-  CronRepublishEnabled: false
-  CronDelayPublishEnabled: false
+  RedisUsername:
+  RedisPassword:
 
   # DATABASE
   DB_HOST: 127.0.0.1
   DB_PORT: 3306
   DB_DATABASE: mq_v2
   DB_USERNAME: root
-  DB_PASSWORD: ""
+  DB_PASSWORD:
 
-  EachQueueConsumerNum: 5
-  EachQueueProducerNum: 3
-  BackConsumerGoroutineNum: 20
-  BackgroundConsumerEnabled: true
+  # 每个队列的消费者数量
+  EachQueueConsumerNum: 4
+
+  # 每个队列的生产者数量
+  EachQueueProducerNum: 2
