TODO: 还需要解决客户端退出导致服务端consume prefetch 一直没办法消费的情况

--- a/charts/templates/service.yaml
+++ b/charts/templates/service.yaml
@@ -5,6 +5,7 @@ metadata:
   labels:
     {{- include "charts.labels" . | nindent 4 }}
 spec:
+  sessionAffinity: ClientIP
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.httpPort }}
